--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
 	      				<p>Презентуем наши инвестиционные портфели</p>
 	      			</li>
 	      			<li>
-	      				<a href="" class="sosial-img"><img src="img/logo.png"></a>
+	      				<a href="" class="sosial-img"><img src="img/logo2.png"></a>
 	      				<p>Размышляем на темы, которые нас волнуют</p>
 	      			</li>
 	      		</ul>
