--- a/index.html
+++ b/index.html
@@ -245,7 +245,7 @@
 									<div class="overflow">
 
 									</div>
-									<h3 class="title-form-banner">Подам заявку на обучения</h3>
+									<h3 class="title-form-banner">Подать заявку на обучения</h3>
 									<div class="col-md-4 padd-none">
 										<div class="fn-number ">
 											<span class="mest__timer-four">8</span>
@@ -389,7 +389,7 @@
 								<div class="overflow">
 
 								</div>
-								<h3 class="title-form-banner">Подам заявку на обучения</h3>
+								<h3 class="title-form-banner">Подать заявку на обучения</h3>
 								<div class="col-md-4 padd-none">
 									<div class="fn-number ">
 										<span class="mest__timer-four">8</span>
