--- a/index.html
+++ b/index.html
@@ -556,9 +556,9 @@
 					<hr class="line-green">
 				</div>
 				<div class="fn-license__wrapper">
-					<p>"После прохождения обучения Вы получите свидетельство о дополнительном профессиональном
+					<p>После прохождения обучения Вы получите свидетельство о дополнительном профессиональном
 						образовании, а при прохождении полного курса - диплом  с присвоением
-						квалификации «Трейдер»."
+						квалификации «Трейдер».
 					</p>
 					<div class="fn-license__img">
 						<a data-fancybox href="img/license.jpg"><img src="img/license.jpg"></a>
