--- a/index.html
+++ b/index.html
@@ -122,7 +122,7 @@
 							</form>
 							<div class="fn-form-popup">
 								<div class="fn-form-popup__wrapper">
-									<p>Иван Иванович записался  на бесплатное обучение</p>
+									<p>Алексей Новиков записался  на бесплатное обучение</p>
 									<div class="fn-number ">
 										<span class="timer">8</span>
 										<p>мест осталось</p>
