--- a/index.html
+++ b/index.html
@@ -96,9 +96,9 @@
 				<div class="container">
 					<div class="row">
 						<div class="col-md-12">
-							<h1>Бесплатное обучение биржевой торговле в первом
-							и единственном институте трейндинга и инвестиций
-							в Российской Федерации!</h1>
+							<h1>Бесплатное обучение заработку на криптовалюте в первом 
+								и единственном институте трейндинга и инвестиций 
+								в Российской Федерации!</h1>
 							<h2>Мы набираем бесплатную тестовую<br>
 							группу из 10 человек!</h2>
 							<form class="fn-contact__form-big" >
@@ -205,9 +205,10 @@
 						<div class="row">
 
 							<div class="col-md-12">
-								<h1 class="">Бесплатное обучение биржевой торговле в первом
-								и единственном институте трейндинга и инвестиций
-								в Российской Федерации!</h1>
+								<h1 class="">Бесплатное обучение пассивному заработку на криптовалютах 
+в первом и единственном институте трейндинга 
+и инвестиций в Российской Федерации!
+</h1>
 								<!-- <div class="fn-form-popup-two">
 									<h2>Спасибо</h2>
 									<a class="close" href="#popup1">&times;</a>
@@ -234,9 +235,11 @@
 								</div>
 
 							<div class="col-md-6">
-								<p>По статистике 97% людей сливают свои деньги
-								на финансовых рынках по причине не знания!
-								ВЫ ХОТИТЕ БЫТЬ В ЧИСЛЕ ОСТАВИХСЯ 3%?</p>
+								<p>За 2017 год 97% людей потеряли свои деньги 
+									на криптовалютах, или были обмануты 
+									мошенниками по причине не знания! 
+									ВЫ ХОТИТЕ БЫТЬ В ЧИСЛЕ ОСТАВШИХСЯ 3%?
+								</p>
 								<h2>Мы набираем бесплатную тестовую   группу из 10 человек!</h2>
 
 							</div>
@@ -348,9 +351,11 @@
 					<div class="row">
 
 						<div class="col-md-12">
-							<h1 class="">Бесплатное обучение биржевой торговле в первом
-							и единственном институте трейндинга и инвестиций
-							в Российской Федерации!</h1>
+							<h1 class="">Бесплатное обучение пассивному заработку 
+								на криптовалютах в первом институте 
+								трейндинга и инвестиций 
+								в Российской Федерации!
+							</h1>
 							<!-- <div class="fn-form-popup-two">
 								<h2>Спасибо</h2>
 								<a class="close" href="#popup1">&times;</a>
@@ -377,9 +382,9 @@
 							</div>
 
 						<div class="col-md-6">
-							<p>По статистике 97% людей сливают свои деньги
-							на финансовых рынках по причине не знания!
-							ВЫ ХОТИТЕ БЫТЬ В ЧИСЛЕ ОСТАВИХСЯ 3%?</p>
+							<p>Зарабатывайте от 70 000 рублей в месяц 
+								в ближайшие 1-2 месяца после обучения 
+							</p>
 							<h2>Мы набираем бесплатную тестовую   группу из 10 человек!</h2>
 
 
