--- a/index.html
+++ b/index.html
@@ -26,29 +26,29 @@
 	<div id="modal_form"><!-- Сaмo oкнo -->
 	      <div class="popup fn-form-popup-two">
 	      	<span id="modal_close">X</span> <!-- Кнoпкa зaкрыть -->
-	      		<h2>Спасибо</h2>
-	      		<p>Наш менеджер свяжется с Вами в ближайшее время.</p>
+	      		<h2>Поздравляем! Вы записались на бесплатное обучение!</h2>
+	      		<p>Наш менеджер свяжется с Вами в ближайшее время и уточнит все детали.</p>
 	      		<p class="text-blue">Подписывайтесь на наши соц.сети и будьте в курсе последних новостей</p>
 	      		<ul class="fn-popup-sosial">
-	      			<li><a href="" class="sosial">
+	      			<li><a href="https://www.google.com.ua/" class="sosial">
 	      				<i class="fa fa-vk" aria-hidden="true"></i></a>
-	      				<p>Пишем про инвестиции, акции и компании</p>
+	      				<p>Показываем как проходит обучение, общаемся с учиниками </p>
 	      			</li>
 	      			<li>
-	      				<a href="" class="sosial">
+	      				<a href="https://www.google.com.ua/" class="sosial">
 	      					<i class="fa fa-google-plus" aria-hidden="true"></i>
 	      				</a>
 	      				<p>Рассказываем интересные истории из мира финансов</p>
 	      			</li>
 	      			<li>
-	      				<a href="" class="sosial">
+	      				<a href="https://www.google.com.ua/" class="sosial">
 	      					<i class="fa fa-youtube-play" aria-hidden="true"></i>
 	      				</a>
-	      				<p>Презентуем наши инвестиционные портфели</p>
+	      				<p>Презентуем программы обучения и выкладываем записи лекций</p>
 	      			</li>
 	      			<li>
-	      				<a href="" class="sosial-img"><img src="img/logo2.png"></a>
-	      				<p>Размышляем на темы, которые нас волнуют</p>
+	      				<a href="https://www.google.com.ua/" class="sosial-img"><img src="img/logo2.png"></a>
+	      				<p>Оригинальный сайт, где вы можете узнать все о нашем институте и посмотреть расписание</p>
 	      			</li>
 	      		</ul>
 	     </div>
@@ -96,8 +96,8 @@
 				<div class="container">
 					<div class="row">
 						<div class="col-md-12">
-							<h1>Бесплатное обучение заработку на криптовалюте в первом 
-								и единственном институте трейндинга и инвестиций 
+							<h1>Бесплатное обучение заработку на криптовалюте в первом
+								и единственном институте трейндинга и инвестиций
 								в Российской Федерации!</h1>
 							<h2>Мы набираем бесплатную тестовую<br>
 							группу из 10 человек!</h2>
@@ -205,8 +205,8 @@
 						<div class="row">
 
 							<div class="col-md-12">
-								<h1 class="">Бесплатное обучение пассивному заработку на криптовалютах 
-в первом и единственном институте трейндинга 
+								<h1 class="">Бесплатное обучение пассивному заработку на криптовалютах
+в первом и единственном институте трейндинга
 и инвестиций в Российской Федерации!
 </h1>
 								<!-- <div class="fn-form-popup-two">
@@ -235,9 +235,9 @@
 								</div>
 
 							<div class="col-md-6">
-								<p>За 2017 год 97% людей потеряли свои деньги 
-									на криптовалютах, или были обмануты 
-									мошенниками по причине не знания! 
+								<p>За 2017 год 97% людей потеряли свои деньги
+									на криптовалютах, или были обмануты
+									мошенниками по причине не знания!
 									ВЫ ХОТИТЕ БЫТЬ В ЧИСЛЕ ОСТАВШИХСЯ 3%?
 								</p>
 								<h2>Мы набираем бесплатную тестовую   группу из 10 человек!</h2>
@@ -351,9 +351,9 @@
 					<div class="row">
 
 						<div class="col-md-12">
-							<h1 class="">Бесплатное обучение пассивному заработку 
-								на криптовалютах в первом институте 
-								трейндинга и инвестиций 
+							<h1 class="">Бесплатное обучение пассивному заработку
+								на криптовалютах в первом институте
+								трейндинга и инвестиций
 								в Российской Федерации!
 							</h1>
 							<!-- <div class="fn-form-popup-two">
@@ -382,8 +382,8 @@
 							</div>
 
 						<div class="col-md-6">
-							<p>Зарабатывайте от 70 000 рублей в месяц 
-								в ближайшие 1-2 месяца после обучения 
+							<p>Зарабатывайте от 70 000 рублей в месяц
+								в ближайшие 1-2 месяца после обучения
 							</p>
 							<h2>Мы набираем бесплатную тестовую   группу из 10 человек!</h2>
 
@@ -1023,18 +1023,15 @@
 				<div class="fn-after-course__wrapper">
 					<div class="col-md-8">
 						<div class="fn-after-course__item">
-							<h4>Зарабатывать на росте и падении криптовалют</h4>
-							<p>Вы узнаете почему покупать биткоин по 15 000$ это плохая идея. 
-								И как в таких ситуациях можно зарабатывать на криптовалюте.
-								Что делать когда рынок "на дне"? </p>
+							<h4>Надежность</h4>
+							<p>За 1 месяц составила рекордная прибыль нашего ученика после обучения</p>
 						</div>
 					</div>
 				</div>
 				<div class="col-md-8">
 					<div class="fn-after-course__item stability">
-						<h4>Создать свою майнинг ферму</h4>
-						<p> Покажем на практике, что такое майнинг.
-							Поможем просчитать всю экономику создание своей майнинг фермы.</p>
+						<h4>Стабильность</h4>
+						<p>За 1 месяц составила рекордная прибыль нашего ученика после обучения</p>
 					</div>
 				</div>
 			</div>
@@ -1043,18 +1040,15 @@
 				<div class="fn-after-course__wrapper">
 					<div class="col-md-8 col-md-8 fn-after-course__right">
 						<div class="fn-after-course__item  reliability">
-							<h4>Контролировать свои эмоции </h4>
-							<p>Очень часто новички после первых заработанных денег начинают делать типичные ошибки, 
-								которые приводят к существенным потерям капитала. Не допустите этого!</p>
+							<h4>Надежность</h4>
+							<p>За 1 месяц составила рекордная прибыль нашего ученика после обучения</p>
 						</div>
 					</div>
 				</div>
 				<div class="col-md-8 fn-after-course__right">
 					<div class="fn-after-course__item stability-new">
-						<h4>Работать с графиками</h4>
-						<p>Если вы хотите зарабатывать на криптовалюте - Вы никуда не денетесь от работы с графиками. 
-							Конечно можно слушать советы "экспертов", 
-							но тогда не удивляйтесь почему у Вашем кармане пусто.</p>
+						<h4>Надежность</h4>
+						<p>За 1 месяц составила рекордная прибыль нашего ученика после обучения</p>
 					</div>
 				</div>
 			</div>
@@ -1067,6 +1061,91 @@
 
 </section>
 
+<section class="fn-funist">
+	<div class="container">
+
+		<div class="fn-title-section fn-text-white">
+			<h3>ФинИст - это уникальное место 
+где концентрируется финансовая элита Москвы. </h3>
+			<p>У нас вы найдете будущих друзей, бизнес партнеров и экспертов
+с кем можно обсудить вопросы инвестирования
+и заработка на различных активах.</p>
+		</div>
+		<div class="row">
+			<div class="col-md-6 pr">
+				<div class="fn-funist__foto ">
+					<img src="img/pEQLvG4z82A.png">
+				</div>
+			</div>
+			<div class="col-md-6 pl">
+				<div class="fn-funist__foto">
+					<img src="img/WgRwnSkfZtQ.png">
+				</div>
+				<div class="fn-funist__foto">
+					<img src="img/xhvsnjNc5qI.png">
+				</div>
+			</div>
+			<div class="col-md-12"> 
+				<div class="fn-funist__text"> 
+					<h4>За все время работы обучение прошло более 5 000 человек</h4>
+					<div class="form-input">
+						<button class="fn-btn btn-form-four">Записаться</button>
+					</div>
+				</div>
+			</div>
+			
+		</div>
+
+
+	</div>
+
+</section>
+
+
+<section class="fn-funist-second">
+	<div class="container">
+
+		<div class="fn-title-section fn-text-white fn-text-left">
+			<h3>ФинИст - это уникальное место<br>
+где концентрируется финансовая элита Москвы. </h3>
+			<p>У нас вы найдете будущих друзей, бизнес партнеров<br> и экспертов
+с кем можно обсудить вопросы инвестирования <br>
+и заработка на различных активах.</p>
+		</div>
+		<div class="row">
+			<div class="col-md-8 pr">
+				<div class="col-md-6 pr">
+					<div class="fn-funist__text "> 
+						<h4 class="fn-text-left">За все время работы обучение прошло более 5 000 человек</h4>
+						<div class="form-input">
+							<button class="fn-btn btn-form-four">Записаться</button>
+						</div>
+					</div>
+				</div>
+				<div class="col-md-6 pr">
+					<div class="fn-funist__foto foto2">
+						<img src="img/pEQLvG4z82Aw.png">
+					</div>
+				</div>
+			</div>
+
+			<div class="col-md-4 pl">
+				<div class="fn-funist__foto foto1">
+					<img src="img/WgRwnSkfZtQc.png">
+				</div>
+				<div class="fn-funist__foto foto2">
+					<img src="img/xhvsnjNc5qIh.png">
+				</div>
+			</div>
+			
+		</div>
+
+
+	</div>
+
+	<img class="elementf" src="img/elementf.png">
+
+</section>
 
 </div>
 	<script src="js/jquery-2.1.3.min.js"></script>
@@ -1077,3 +1156,4 @@
 
 </body>
 </html>
+
