--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@
 						<div class="row">
 							<div class="col-md-2 col-sm-2">
 								<div class="fn-header__logo">
-									<a href=""><img src="img/logo.svg" class="img-responsive"></a>
+									<a href=""><img src="logo.svg" class="img-responsive"></a>
 								</div>
 								<a class="menu-cont" href="#">
 									<span class="menu"></span>
