--- a/index.html
+++ b/index.html
@@ -31,24 +31,20 @@
 	      		<p class="text-blue">Подписывайтесь на наши соц.сети и будьте в курсе последних новостей</p>
 	      		<ul class="fn-popup-sosial">
 	      			<li><a href="https://www.google.com.ua/" class="sosial">
-	      				<i class="fa fa-vk" aria-hidden="true"></i></a>
+	      				<i class="fa fa-vk" aria-hidden="true"></i>
 	      				<p>Показываем как проходит обучение, общаемся с учиниками </p>
+					</a>
 	      			</li>
-	      			<li>
-	      				<a href="https://www.google.com.ua/" class="sosial">
-	      					<i class="fa fa-google-plus" aria-hidden="true"></i>
-	      				</a>
-	      				<p>Рассказываем интересные истории из мира финансов</p>
-	      			</li>
+	      			
 	      			<li>
 	      				<a href="https://www.google.com.ua/" class="sosial">
 	      					<i class="fa fa-youtube-play" aria-hidden="true"></i>
-	      				</a>
-	      				<p>Презентуем программы обучения и выкладываем записи лекций</p>
+	      				
+	      				<p>Презентуем программы обучения и выкладываем записи лекций</p></a>
 	      			</li>
 	      			<li>
-	      				<a href="https://www.google.com.ua/" class="sosial-img"><img src="img/logo2.png"></a>
-	      				<p>Оригинальный сайт, где вы можете узнать все о нашем институте и посмотреть расписание</p>
+	      				<a href="https://www.google.com.ua/" class="sosial-img"><img src="img/logof.png">
+	      				<p>Оригинальный сайт, где вы можете узнать все о нашем институте и посмотреть расписание</p></a>
 	      			</li>
 	      		</ul>
 	     </div>
