--- a/index.html
+++ b/index.html
@@ -30,20 +30,22 @@
 	      		<p>Наш менеджер свяжется с Вами в ближайшее время и уточнит все детали.</p>
 	      		<p class="text-blue">Подписывайтесь на наши соц.сети и будьте в курсе последних новостей</p>
 	      		<ul class="fn-popup-sosial">
-	      			<li><a href="https://www.google.com.ua/" class="sosial">
+	      			<li><a href="https://www.google.com.ua/" class="sosial"></a>
 	      				<i class="fa fa-vk" aria-hidden="true"></i>
+					<a href="https://www.google.com.ua/">
 	      				<p>Показываем как проходит обучение, общаемся с учиниками </p>
 					</a>
 	      			</li>
 	      			
 	      			<li>
 	      				<a href="https://www.google.com.ua/" class="sosial">
-	      					<i class="fa fa-youtube-play" aria-hidden="true"></i>
-	      				
+	      					<i class="fa fa-youtube-play" aria-hidden="true"></i></a>
+	      				<a href="https://www.google.com.ua/">
 	      				<p>Презентуем программы обучения и выкладываем записи лекций</p></a>
 	      			</li>
 	      			<li>
-	      				<a href="https://www.google.com.ua/" class="sosial-img"><img src="img/logof.png">
+					<a href="https://www.google.com.ua/" class="sosial-img"><img src="img/logoF.png"></a>
+						<a href="https://www.google.com.ua/">
 	      				<p>Оригинальный сайт, где вы можете узнать все о нашем институте и посмотреть расписание</p></a>
 	      			</li>
 	      		</ul>
