--- a/index.html
+++ b/index.html
@@ -30,8 +30,8 @@
 	      		<p>Наш менеджер свяжется с Вами в ближайшее время и уточнит все детали.</p>
 	      		<p class="text-blue">Подписывайтесь на наши соц.сети и будьте в курсе последних новостей</p>
 	      		<ul class="fn-popup-sosial">
-	      			<li><a href="https://www.google.com.ua/" class="sosial"></a>
-	      				<i class="fa fa-vk" aria-hidden="true"></i>
+	      			<li><a href="https://www.google.com.ua/" class="sosial">
+	      				<i class="fa fa-vk" aria-hidden="true"></i></a>
 					<a href="https://www.google.com.ua/">
 	      				<p>Показываем как проходит обучение, общаемся с учиниками </p>
 					</a>
