--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
 	      			<li>
 					<a href="https://www.google.com.ua/" class="sosial-img"><img src="img/logoF.png"></a>
 						<a href="https://www.google.com.ua/">
-	      				<p>Оригинальный сайт, где вы можете узнать все о нашем институте и посмотреть расписание</p></a>
+	      				<p  class="p-img">Оригинальный сайт, где вы можете узнать все о нашем институте и посмотреть расписание</p></a>
 	      			</li>
 	      		</ul>
 	     </div>
