--- a/index.html
+++ b/index.html
@@ -174,7 +174,7 @@
 							<div class="row">
 								<div class="col-md-2 col-sm-2">
 									<div class="fn-header__logo">
-										<a href=""><img src="img/logo.png" class="img-responsive"></a>
+										<a href=""><img src="img/logoF.png" class="img-responsive"></a>
 									</div>
 									<a class="menu-cont cont" href="#">
 										<span class="menu"></span>
@@ -320,7 +320,7 @@
 						<div class="row">
 							<div class="col-md-2 col-sm-2">
 								<div class="fn-header__logo">
-									<a href=""><img src="img/logo.png" class="img-responsive"></a>
+									<a href=""><img src="img/logoF.png" class="img-responsive"></a>
 								</div>
 								<a class="menu-cont cont" href="#">
 									<span class="menu"></span>
@@ -1154,4 +1154,3 @@
 
 </body>
 </html>
-
