--- a/index.html
+++ b/index.html
@@ -1021,15 +1021,15 @@
 				<div class="fn-after-course__wrapper">
 					<div class="col-md-8">
 						<div class="fn-after-course__item">
-							<h4>Надежность</h4>
-							<p>За 1 месяц составила рекордная прибыль нашего ученика после обучения</p>
+							<h4>Зарабатывать на росте и падении криптовалют</h4>
+							<p>Вы узнаете почему покупать биткоин по 15 000$ это плохая идея. И как в таких ситуациях можно зарабатывать на криптовалюте. Что делать когда рынок "на дне"? </p>
 						</div>
 					</div>
 				</div>
 				<div class="col-md-8">
 					<div class="fn-after-course__item stability">
-						<h4>Стабильность</h4>
-						<p>За 1 месяц составила рекордная прибыль нашего ученика после обучения</p>
+						<h4>Создать свою майнинг ферму</h4>
+						<p>Покажем на практике, что такое майнинг. Поможем просчитать всю экономику создание своей майнинг фермы.</p>
 					</div>
 				</div>
 			</div>
@@ -1038,15 +1038,15 @@
 				<div class="fn-after-course__wrapper">
 					<div class="col-md-8 col-md-8 fn-after-course__right">
 						<div class="fn-after-course__item  reliability">
-							<h4>Надежность</h4>
-							<p>За 1 месяц составила рекордная прибыль нашего ученика после обучения</p>
+							<h4>Контролировать свои эмоции </h4>
+							<p>Очень часто новички после первых заработанных денег начинают делать типичные ошибки, которые приводят к существенным потерям капитала. Не допустите этого! </p>
 						</div>
 					</div>
 				</div>
 				<div class="col-md-8 fn-after-course__right">
 					<div class="fn-after-course__item stability-new">
-						<h4>Надежность</h4>
-						<p>За 1 месяц составила рекордная прибыль нашего ученика после обучения</p>
+						<h4>Работать с графиками</h4>
+						<p>Если вы хотите зарабатывать на криптовалюте - Вы никуда не денетесь от работы с графиками. Конечно можно слушать советы "экспертов", но тогда не удивляйтесь почему у Вашем кармане пусто.</p>
 					</div>
 				</div>
 			</div>
