--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
 	      				<p>Презентуем программы обучения и выкладываем записи лекций</p></a>
 	      			</li>
 	      			<li>
-					<a href="https://www.google.com.ua/" class="sosial-img"><img src="img/logoF.png"></a>
+					<a href="https://www.google.com.ua/" class="sosial-img"><img src="img/logggoF.png"></a>
 						<a href="https://www.google.com.ua/">
 	      				<p  class="p-img">Оригинальный сайт, где вы можете узнать все о нашем институте и посмотреть расписание</p></a>
 	      			</li>
