--- a/index.html
+++ b/index.html
@@ -84,7 +84,7 @@
 								</nav>
 							</div>
 							<div class="col-md-2">
-								<p class="fn-phone none"><a href="">+7 (925) 864 11 13</a></p>
+								<p class="fn-phone none"><a href="">8 800 222 77 14</a></p>
 
 							</div>
 
