--- a/index.html
+++ b/index.html
@@ -193,7 +193,7 @@
 									</nav>
 								</div>
 								<div class="col-md-2">
-									<p class="fn-phone none"><a href="tel:+79258641113">+7 (925) 864 11 13</a></p>
+									<p class="fn-phone none"><a href="tel:88002227714">8 800 222 77 14</a></p>
 
 								</div>
 							</div>
@@ -339,7 +339,7 @@
 								</nav>
 							</div>
 							<div class="col-md-2">
-								<p class="fn-phone none"><a href="tel:+79258641113">+7 (925) 864 11 13</a></p>
+								<p class="fn-phone none"><a href="tel:8 800 222 77 14">8 800 222 77 14</a></p>
 
 							</div>
 						</div>
